fix bugs on the logo size and the productcard description on mobile

--- a/src/Components/HeaderCss.css
+++ b/src/Components/HeaderCss.css
@@ -203,7 +203,7 @@
     text-decoration: none;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 912px) {
     .header {
         display: flex;
         gap: 54px;
